--- a/sections/product-specifications.liquid
+++ b/sections/product-specifications.liquid
@@ -1,4 +1,4 @@
-<div class="product-detail-tab">
+<div class="product-detail-tab padd-t-100">
     <div class="container">
         <div class="product-kit-tabs">
             <ul class="nav nav-pills" role="tablist">
