--- a/snippets/price.liquid
+++ b/snippets/price.liquid
@@ -49,9 +49,7 @@
     {%- endcomment -%}
     <div class="product-price price__regular">
       <span class="visually-hidden visually-hidden--inline">{{ 'products.product.price.regular_price' | t }}</span>
-      <span class="plat-price price-item price-item--regular">
-        {{ money_price }}
-      </span>
+      <span class="plat-price price-item price-item--regular" data-price="{{ money_price }}">{{ money_price }}</span>
     </div>
     <div class="product-price price__sale">
       {%- unless product.price_varies == false and product.compare_at_price_varies %}
