--- a/assets/collumndual.css
+++ b/assets/collumndual.css
@@ -2,7 +2,7 @@
 
 
     .row {
-        display: block !important;
+        display: block;
         grid-template-columns: repeat(2, 1fr);
     }
 
