Lab test registration error validation and added new coach

--- a/sections/coaching-coaches-team.liquid
+++ b/sections/coaching-coaches-team.liquid
@@ -30,7 +30,23 @@
           </div>
           <div class="col-lg-7">
             <div class="experts-info">
-              <p>Jessica is a fertility clinician with over a decade of experience working directly with patients to achieve their parenthood dreams. She understands the critical importance of hormone tracking along with integrating holistic approaches. She aims to provide her clients with actionable steps to enhance their chances of getting pregnant. In addition to her fertility coaching experience, Jessica holds a New York State RN license and a Master's Degree in Health Administration. She is also an active member of The American Society for Reproductive Medicine (ASRM).</p>
+              <p>Meet Jessica, our fertility expert with a decade of experience. Skilled in decoding Mira reports, she tailors actionable plans for your unique fertility journey. Jessica, a licensed RN in New York, holds a Master’s in Health Administration and is an active member of the American Society of Reproductive Medicine. Beyond numbers, Jessica will recommend actionable steps and lifestyle modifications, including personalized functional nutrition, effective dosing for supplements (with tips on improving egg quality), interpretation of your Mira reports with an in-depth hormone analysis, a realistic exercise regimen adapted to your lifestyle, and practical strategies for optimizing men's fertility, to enhance your chances of getting pregnant.</p>
+              <p>Empowering you with knowledge and tools, Jessica is dedicated to enhancing your chances of a successful pregnancy.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="experts-col row">
+          <div class="col-lg-5">
+            <div class="experts-img">
+              <img src="{{ 'jackie_white.png' | file_img_url: '' }}" alt="img" />
+              <div class="expert-name">Jackie White</div>
+              <p>PT, DPT</p>
+            </div>
+          </div>
+          <div class="col-lg-7">
+            <div class="experts-info">
+              <p>Jackie is a Certified Holistic Fertility Doula, Natural Family Planning Instructor, and Pelvic Health Physical Therapist specializing in pelvic pain and fertility optimization. She specializes in supporting clients navigate their cycles with unexplained infertility, PCOS, after loss and post-hormonal birth control use. Her coaching philosophy prioritizes the four E’s: emotional support, education, empowerment, and ethical and inclusive care for all.</p>
             </div>
           </div>
         </div>
