--- a/assets/collumndual.css
+++ b/assets/collumndual.css
@@ -1,7 +1,7 @@
 @media screen and (max-width: 767px) {
 
 
-    .row {
+    #productlist .row {
         display: block;
         grid-template-columns: repeat(2, 1fr);
     }
