--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -454,6 +454,7 @@
   </head>
 
   <body
+    data-dual-col="true"
     class="gradient template-{{ template | split: '.' | first }} {{ template }}{% if template == "product" %} {{ product.handle }}{% endif %} {% for tag in product.tags %} {{ tag }}{% endfor %}"
   >
     <a class="skip-to-content-link button visually-hidden" href="#MainContent">
