add conditionals to show products by markets

--- a/templates/product.best-sellers.liquid
+++ b/templates/product.best-sellers.liquid
@@ -23,8 +23,9 @@
                         <h3>Best Sellers</h3>
                     </div>
                 </div>
-                <div class="row accessories-product-list bundles-product-list">
-                {% if localization.market.handle == 'us' %}
+                <div class="row accessories-product-list bundles-product-list" id="productlist">
+                
+                
                     <div class="col-md-4">
                         <div class="product-col">
                             <div class="product-img-col">
@@ -105,7 +106,7 @@
                             </div>
                         </div>
                     </div>
-
+                {% if localization.market.handle == 'us' %}
                     <div class="col-md-4">
                         <div class="product-col">
                             <div class="product-img-col">
@@ -207,7 +208,7 @@
                             </div>
                         </div>
                     </div>
-
+                {% endif %}
                     <div class="col-md-4">
                         <div class="product-col">
                             <div class="product-img-col">
@@ -241,8 +242,8 @@
                             </div>
                         </div>
                     </div>
-                {% endif %}
-
+                
+                {% comment %}
                     {% if localization.market.handle == 'zzz' %}
                     <div class="col-md-4">
                         <div class="product-col">
@@ -265,6 +266,7 @@
                         </div>
                     </div>
                     {% endif %}
+                {% endcomment %}
                 </div>
             </div>
             <div class="mira-flat-banner mira-fertility-banner">
@@ -292,3 +294,15 @@
         </div>
     </div>
 </div>
+
+{% schema %}
+{
+  "name": "Best Sellers List",
+  "settings": [],
+  "presets": [
+    {
+      "name": "Best Sellers List"
+    }
+  ]
+}
+{% endschema %}
